themes/softed/style.css
/* ... */
a.drop_down_usersettings_name{
	text-align:left;
	font-family:  Arial, Helvetica, sans-serif;
	font-size: 11px;
	line-height:20px;
	color:#33338c;
	background-color:#fff;
	padding:2px 5px 2px 5px;
	border-top:1px solid #fafafa;
	border-bottom:1px solid #d3d3d3;
	display:block;
	text-decoration:none;
}
input:focus {
	outline: none;
}
a.allMnu{
	font-family:Verdana, Arial, Helvetica, sans-serif;
	font-size:10px;
	text-decoration:none;
	font-weight:normal;
	display:block;
	width:125px;
	height:15px;
	padding-left:5px;
	padding-top:0px;
	padding-bottom:0px;
	background-color:#FFFFFF;
	border:1px solid #FFFFFF;
	color:#000033;
	margin-left:20px;
}
a.allMnu:Hover{
	font-family:Verdana, Arial, Helvetica, sans-serif;
	font-size:10px;
	text-decoration:none;
	font-weight:normal;
	display:block;
	width:125px;
	height:15px;
	padding-left:5px;
	padding-top:0px;
	padding-bottom:0px;
	background-color:#eef;
	color:#333;
}
#search{
	border:3px solid #4E8DCC;
	background-color:#ffffef;
	width :50%;
}
.drop_mnu_user{
	top:0px;
	z-index:1000000001;
	border-left:1px solid #d3d3d3;
	border-right:1px solid #d3d3d3;
	border-bottom:1px solid #d3d3d3;
	display:none;
	padding:0px;
	text-align:left;
	overflow-x:hidden;
	overflow-y:hidden;
	background-color:#ffffff;
	margin-top: 0px; /* added */
	display:none;
}
.userName{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 16px;
	color: #000000;
	font-weight:bold;
}
.drop_mnu_user{
	position:absolute;
	left:0px;
	top:0px;
	z-index:1000000001;
	border-left:1px solid #d3d3d3;
	border-right:1px solid #d3d3d3;
	border-bottom:1px solid #d3d3d3;
	display:none;
	padding:0px;
	text-align:left;
	overflow-x:hidden;
	overflow-y:hidden;
	background-color:#ffffff;
	margin-top: 0px; /* added */
}
.drop_mnu_user:Hover{
	background-color:#ffffcc;
}
.drop_mnu{
	position:absolute;
	left:0px;
	top:0px;
	z-index:1000000001;
	border-left:1px solid #d3d3d3;
	border-right:1px solid #d3d3d3;
	border-bottom:1px solid #d3d3d3;
	width:150px;
	display:none;
	padding:0px;
	text-align:left;
	overflow-x:hidden;
	overflow-y:hidden;
	background-color:#ffffcc;
	margin-top: 0px; /* added */
}
.searchBtn{
	width:48px;
	height:24px;
}

.selectall{
	cursor:pointer;
	color:#0044AA;
	text-decoration:underline;
}
#count,.folder{
	font-weight:bold;
}
.linkForSelectAll{
	text-align:center;
	background-color:white;
}

.cb-alert-warning, .cb-alert-danger, .cb-alert-info, .cb-alert-success {
	border-style: solid;
	border-radius: 12px;
	margin: 6px;
	padding: 10px;
	min-height: 30px;
	font-size: larger;
}

.cb-alert-warning {
	background-color: #fcf8e3;
	border-color: #faebcc;
	color: #8a6d3b
}

.cb-alert-danger {
	background-color: #f2dede;
	border-color: #ebccd1;
	color: #a94442
}

.cb-alert-info {
	background-color: #d9edf7;
	border-color: #bce8f1;
	color: #31708f
}

.cb-alert-success {
	background-color: #dff0d8;
	border-color: #d6e9c6;
	color: #3c763d
}

